--- a/admin.html
+++ b/admin.html
@@ -3,108 +3,246 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Beach House Admin Dashboard v2.0</title>
+<title>Beach House Admin Dashboard v2.4</title>
 <style>
-body { font-family: Arial,sans-serif; margin:0; padding:0; background:linear-gradient(135deg,#0072ff,#00c6ff); color:#fff; }
-.container { max-width:1000px; margin:0 auto; padding:20px; }
-h1,h2,h3 { text-align:center; margin-bottom:20px; }
-section { background:rgba(0,0,0,0.2); padding:15px; border-radius:10px; margin-bottom:20px; }
-input,textarea,button,select { width:100%; padding:10px; margin:5px 0; border-radius:10px; border:none; font-size:1rem; }
-button { cursor:pointer; transition:0.2s; font-weight:bold; }
-.add-btn { background-color:#00ff6a; color:#000; }
-.add-btn:hover { opacity:.8; }
-.cancel-btn { background-color:#ff4d4d; color:#000; }
-.cancel-btn:hover { opacity:.8; }
-.feedback { font-weight:bold; margin-top:5px; }
-table { width:100%; border-collapse:collapse; margin-top:10px; }
-th,td { padding:10px; text-align:left; border-bottom:1px solid rgba(255,255,255,0.3);}
+html,body {height:100%;margin:0;padding:0;font-family:Arial,sans-serif;background:linear-gradient(135deg,#0072ff,#00c6ff);color:#fff;overflow-x:hidden;}
+.container {max-width:1000px;margin:0 auto;padding:20px;}
+h1,h2,h3 {text-align:center;margin-bottom:20px;}
+table {width:100%;border-collapse:collapse;margin-bottom:20px;}
+th,td {padding:10px;border:1px solid #fff;text-align:center;}
+button {cursor:pointer;padding:5px 10px;border-radius:10px;border:none;margin:2px;font-weight:bold;transition:0.2s;}
+button:hover {opacity:0.8;}
+.tabs {display:flex;justify-content:center;margin-bottom:20px;}
+.tab {padding:10px 20px;background:rgba(255,255,255,0.2);margin:0 5px;border-radius:10px;cursor:pointer;}
+.tab.active {background:#fff;color:#0072ff;}
+.modal-bg {display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.7);justify-content:center;align-items:center;z-index:10;}
+.modal {background:#fff;color:#000;padding:20px;border-radius:15px;max-width:400px;width:90%;display:flex;flex-direction:column;}
+.modal input {width:100%;padding:10px;margin:5px 0;border-radius:10px;border:1px solid #ccc;}
+.modal button {margin-top:10px;}
 </style>
 </head>
 <body>
 <div class="container">
-<h1>Beach House Admin Dashboard v2.0</h1>
+<h1>Beach House Admin Dashboard v2.4</h1>
 
-<section>
-<h2>Schedule a Guest</h2>
-<input type="text" id="guestLastName" placeholder="Guest Last Name">
-<input type="date" id="startDate">
-<input type="date" id="endDate">
-<button class="add-btn" id="addGuestBtn">Add Guest</button>
-<span class="feedback" id="scheduleFeedback"></span>
-</section>
+<div class="tabs">
+  <div class="tab active" id="guestsTab">Guest Management</div>
+  <div class="tab" id="controlsTab">Controls</div>
+  <div class="tab" id="messagesTab">Messages</div>
+</div>
 
-<section>
+<!-- Guest Management -->
+<div id="guestsSection">
 <h2>Current Guests</h2>
-<table id="guestTable">
-<thead><tr><th>Last Name</th><th>Start</th><th>End</th><th>Checked-In</th><th>Actions</th></tr></thead>
-<tbody></tbody>
+<table id="guestsTable">
+  <thead>
+    <tr>
+      <th>Last Name</th>
+      <th>Start</th>
+      <th>End</th>
+      <th>Checked In</th>
+      <th>Verification</th>
+      <th>Days Left</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody></tbody>
 </table>
-</section>
+</div>
 
-<section>
-<h2>Work Requests</h2>
-<table id="requestTable">
-<thead><tr><th>Guest</th><th>Request</th><th>Status</th><th>Date</th></tr></thead>
+<!-- Controls -->
+<div id="controlsSection" style="display:none;text-align:center;">
+<h2>Technical Controls</h2>
+<p>Lock or unlock guest tablets and force verification modals.</p>
+<table id="controlsTable">
+<thead><tr><th>Guest</th><th>Verification Status</th><th>Actions</th></tr></thead>
 <tbody></tbody>
 </table>
-</section>
+</div>
+
+<!-- Messages -->
+<div id="messagesSection" style="display:none;">
+<h2>Guest Messages</h2>
+<table id="messagesTable">
+<thead><tr><th>Guest</th><th>Message</th><th>Date</th></tr></thead>
+<tbody></tbody>
+</table>
+</div>
+
+<!-- Extend Stay Modal -->
+<div class="modal-bg" id="extendModal">
+  <div class="modal">
+    <h3>Extend Stay</h3>
+    <input type="number" id="extraDays" placeholder="Number of days to extend">
+    <button id="confirmExtend">Confirm</button>
+    <button id="closeExtend">Cancel</button>
+  </div>
+</div>
 
 <script type="module">
 import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
-const SUPABASE_URL='https://ofnlpqfscyecatetnuqi.supabase.co';
-const SUPABASE_KEY='sb_publishable_jjdmHkgGrbjqYwY14kS9ng_Ivuq-Pjc';
-const supabase=createClient(SUPABASE_URL,SUPABASE_KEY);
 
-const guestLastName=document.getElementById('guestLastName');
-const startDate=document.getElementById('startDate');
-const endDate=document.getElementById('endDate');
-const addGuestBtn=document.getElementById('addGuestBtn');
-const scheduleFeedback=document.getElementById('scheduleFeedback');
-const guestTableBody=document.querySelector('#guestTable tbody');
-const requestTableBody=document.querySelector('#requestTable tbody');
+const SUPABASE_URL = 'https://ofnlpqfscyecatetnuqi.supabase.co';
+const SUPABASE_KEY = 'sb_publishable_jjdmHkgGrbjqYwY14kS9ng_Ivuq-Pjc';
+const supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
 
-addGuestBtn.addEventListener('click', async ()=>{
-  const lastName=guestLastName.value.trim();
-  const start=startDate.value;
-  const end=endDate.value;
-  if(!lastName||!start||!end){ scheduleFeedback.textContent='All fields required.'; return; }
-  const { error } = await supabase.from('guests').insert([{guest_last_name:lastName,start_date:start,end_date:end}]);
-  if(error){ scheduleFeedback.textContent='Error adding guest.'; console.error(error);}
-  else{ scheduleFeedback.textContent='Guest added!'; guestLastName.value=''; startDate.value=''; endDate.value=''; loadGuests();}
-});
+let guests = [];
+let selectedGuest = null;
 
+// --- Tabs ---
+const guestsTab = document.getElementById('guestsTab');
+const controlsTab = document.getElementById('controlsTab');
+const messagesTab = document.getElementById('messagesTab');
+
+const guestsSection = document.getElementById('guestsSection');
+const controlsSection = document.getElementById('controlsSection');
+const messagesSection = document.getElementById('messagesSection');
+
+guestsTab.onclick = ()=>{switchTab('guests');};
+controlsTab.onclick = ()=>{switchTab('controls');};
+messagesTab.onclick = ()=>{switchTab('messages');};
+
+function switchTab(tab){
+  guestsSection.style.display='none';
+  controlsSection.style.display='none';
+  messagesSection.style.display='none';
+  guestsTab.classList.remove('active');
+  controlsTab.classList.remove('active');
+  messagesTab.classList.remove('active');
+
+  if(tab==='guests'){ guestsSection.style.display='block'; guestsTab.classList.add('active'); }
+  if(tab==='controls'){ controlsSection.style.display='block'; controlsTab.classList.add('active'); }
+  if(tab==='messages'){ messagesSection.style.display='block'; messagesTab.classList.add('active'); }
+}
+
+// --- Load Guests ---
 async function loadGuests(){
-  const { data, error } = await supabase.from('guests').select('*').order('start_date',{ascending:true});
-  if(error) return console.error(error);
-  guestTableBody.innerHTML='';
-  data.forEach(g=>{
-    const tr=document.createElement('tr');
-    tr.innerHTML=`<td>${g.guest_last_name}</td><td>${g.start_date}</td><td>${g.end_date}</td><td>${(g.checked_in_dates||[]).join(', ')}</td>
-    <td><button class="cancel-btn" data-id="${g.id}">Cancel</button></td>`;
-    guestTableBody.appendChild(tr);
-  });
-  document.querySelectorAll('.cancel-btn').forEach(btn=>{
-    btn.addEventListener('click', async ()=>{
-      const id=btn.dataset.id;
-      const { error } = await supabase.from('guests').update({active:false}).eq('id',id);
-      if(error) console.error(error); else loadGuests();
-    });
+  const today = new Date().toISOString().slice(0,10);
+  const { data, error } = await supabase.from('guests').select('*').eq('active',true).order('start_date', {ascending:true});
+  if(error){console.error(error); return;}
+  guests = data;
+  renderGuests();
+  renderControls();
+  renderMessages();
+}
+
+function renderGuests(){
+  const tbody = document.querySelector('#guestsTable tbody');
+  tbody.innerHTML='';
+  guests.forEach(g=>{
+    const tr = document.createElement('tr');
+    const end = new Date(g.end_date);
+    const now = new Date();
+    const diff = Math.ceil((end-now)/(1000*60*60*24)) + 1;
+    tr.innerHTML = `
+      <td>${g.guest_last_name}</td>
+      <td>${g.start_date}</td>
+      <td>${g.end_date}</td>
+      <td>${g.checked_in_dates?.length || 0}</td>
+      <td>${g.verification_status}</td>
+      <td>${diff>0?diff:'0'}</td>
+      <td>
+        <button onclick="openExtend(${g.id})">Extend</button>
+        <button onclick="cancelGuest(${g.id})">Cancel</button>
+      </td>
+    `;
+    tbody.appendChild(tr);
   });
 }
 
-async function loadRequests(){
-  const { data, error } = await supabase.from('work_requests').select('*,guest_id(guest_last_name)').order('date',{ascending:true});
-  if(error) return console.error(error);
-  requestTableBody.innerHTML='';
-  data.forEach(r=>{
-    const tr=document.createElement('tr');
-    tr.innerHTML=`<td>${r.guest_id?.guest_last_name || 'Unknown'}</td><td>${r.request_text}</td><td>${r.status}</td><td>${new Date(r.date).toLocaleString()}</td>`;
-    requestTableBody.appendChild(tr);
+// --- Extend Stay ---
+const extendModal = document.getElementById('extendModal');
+const extraDaysInput = document.getElementById('extraDays');
+const confirmExtend = document.getElementById('confirmExtend');
+const closeExtend = document.getElementById('closeExtend');
+
+window.openExtend = function(guestId){
+  selectedGuest = guests.find(g=>g.id===guestId);
+  extraDaysInput.value='';
+  extendModal.style.display='flex';
+}
+
+closeExtend.onclick = ()=>{extendModal.style.display='none'; selectedGuest=null;}
+
+confirmExtend.onclick = async ()=>{
+  const extra = parseInt(extraDaysInput.value);
+  if(!extra || extra<1){ alert('Enter valid days'); return; }
+
+  const newEnd = new Date(selectedGuest.end_date);
+  newEnd.setDate(newEnd.getDate()+extra);
+
+  // Conflict check
+  const conflict = guests.some(g=>{
+    if(g.id===selectedGuest.id) return false;
+    const gStart = new Date(g.start_date);
+    return newEnd >= gStart && new Date(selectedGuest.start_date) <= new Date(g.end_date);
+  });
+
+  if(conflict){ alert('Cannot extend: another guest scheduled'); return; }
+
+  await supabase.from('guests').update({end_date:newEnd.toISOString().slice(0,10)}).eq('id',selectedGuest.id);
+  extendModal.style.display='none';
+  selectedGuest=null;
+  loadGuests();
+}
+
+// --- Cancel Guest ---
+window.cancelGuest = async function(guestId){
+  if(!confirm('Are you sure you want to cancel this guest?')) return;
+  await supabase.from('messages').delete().eq('guest_id',guestId);
+  await supabase.from('work_requests').delete().eq('guest_id',guestId);
+  await supabase.from('guests').delete().eq('id',guestId);
+  loadGuests();
+}
+
+// --- Controls Tab ---
+function renderControls(){
+  const tbody = document.querySelector('#controlsTable tbody');
+  tbody.innerHTML='';
+  guests.forEach(g=>{
+    const tr = document.createElement('tr');
+    tr.innerHTML = `
+      <td>${g.guest_last_name}</td>
+      <td>${g.verification_status}</td>
+      <td>
+        <button onclick="lockGuest(${g.id})">Lock</button>
+        <button onclick="unlockGuest(${g.id})">Unlock</button>
+        <button onclick="forceVerify(${g.id})">Force Verify</button>
+      </td>
+    `;
+    tbody.appendChild(tr);
+  });
+}
+
+window.lockGuest = async function(guestId){
+  await supabase.from('guests').update({verification_status:'locked'}).eq('id',guestId);
+  loadGuests();
+}
+
+window.unlockGuest = async function(guestId){
+  await supabase.from('guests').update({verification_status:'pending'}).eq('id',guestId);
+  loadGuests();
+}
+
+window.forceVerify = async function(guestId){
+  await supabase.from('guests').update({verification_status:'pending', verification_date:null}).eq('id',guestId);
+  loadGuests();
+}
+
+// --- Messages Tab ---
+async function renderMessages(){
+  const tbody = document.querySelector('#messagesTable tbody');
+  tbody.innerHTML='';
+  const { data, error } = await supabase.from('messages').select('*,guest_id(guest_last_name)').order('date', {ascending:true});
+  if(error){console.error(error); return;}
+  data.forEach(m=>{
+    const tr = document.createElement('tr');
+    tr.innerHTML = `<td>${m.guest_id.guest_last_name}</td><td>${m.message_text}</td><td>${new Date(m.date).toLocaleString()}</td>`;
+    tbody.appendChild(tr);
   });
 }
 
 loadGuests();
-loadRequests();
 </script>
 </body>
 </html>
